fix table cells and headers right alignment

--- a/src/app/pages/server-compare/server-compare.component.scss
+++ b/src/app/pages/server-compare/server-compare.component.scss
@@ -10,6 +10,10 @@
       @apply text-left px-5 py-3 font-normal text-xs;
     }
 
+    .compact-number-header-cell {
+      text-align: right !important;
+    }
+
     tr {
       th:nth-of-type(1) {
         position: sticky;
